fixed API call error

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -137,9 +137,14 @@
     </ul>
   </div>
 
+
 </div>
 
-
+<div>
+  <form  action="/load" method="get" class="mt-3">
+    <button  class="btn btn-primary" method="get"> Load</button>
+  </form>
+</div>
 </body>
 <footer class="text-center text-white" style="background-color: #1e7e34">
   <!-- Grid container -->
