next step, add 100 scraped reviews to the database

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -116,8 +116,8 @@
                         </p>
                     </div>
                     <div >
-                        <a href="/login"  class="btn btn-primary btn-lg me-3 p-1">Register Now</a>
-                        <a href="#qualify" class="btn btn-outline-primary btn-lg p-1" >Learn More</a>
+                        <a href="/login"  class="btn btn-primary btn-lg me-3 px-2 py-3">Register Now</a>
+                        <a href="#qualify" class="btn btn-outline-primary btn-lg px-2 py-3" >Learn More</a>
                     </div>
                 </div>
             </div>
