--- a/src/main/resources/templates/directory.html
+++ b/src/main/resources/templates/directory.html
@@ -189,6 +189,8 @@
                                                                         </div>
                                                                         <h6><b><span th:text="${review.title}"></span></b></h6>
                                                                         <p class="rating" th:text="${review.rating}"><b></b></p>
+                                                                        <h6  class="recommended" style="color: green" th:if="${review.getRecommended() == true}">Recommended</h6>
+                                                                        <h6 style="color: red" th:if="${review.getRecommended() == false}">Not Recommended</h6>
                                                                         <p style="color: black"th:text="${review.date}"></p>
                                                                         <p style="color: black" ><span th:text="${review.content}"></span></p>
                                                                         <form th:action="@{'/review/' + ${review.reviewId}}" method="post">
@@ -196,7 +198,7 @@
                                                                             <a th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" th:href="@{/user/dashboard/{userId}(userId=${review.userId})}" class="btn btn-primary">Go to User</a>
 
                                                                         </form>
-                                                                    </div>
+                                                                    </p>
                                                                 </li>
                                                             </ul>
                                                         </div>
