--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -111,7 +111,7 @@
                     <h1 style="font-size: 50px;line-height: 60px;margin-bottom: 20px;font-weight: 900; font-family: Italiana; color: #1e7e34">Find the experts of Italian Citizenship!</h1>
                     <div class="mb-4">
                         <h5><b>Experience A Seamless Journey to Italian Citizenship</b></h5>
-                        <p>
+                        <p >
                             Our goal is to provide transparency in the complicated process of becoming an Italian citizen by connecting you with the best in the business service providers.                        </p>
                         </p>
                     </div>
@@ -141,7 +141,7 @@
                             <img class="logo-img">
                             <h2 class="d-flex justify-content-center mb-4 font-weight-bold title" style="font-family: Italiana">
                             </h2>
-                            <h5 class=" rating"></h5>
+
 
                             <p class="mb-2"><i class="fas fa-quote-left pe-2"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.</p>
                             <a class="read-more"></a>
@@ -155,10 +155,10 @@
 
                             <h2 class="d-flex justify-content-center mb-4 font-weight-bold title" style="font-family: Italiana">
                             </h2>
-                            <h5 class="font-weight-bold my-3 rating">Founder at ET Company</h5>
+                            <h5 class="font-weight-bold my-3"></h5>
                             <ul class="list-unstyled d-flex justify-content-center ">
                             </ul>
-                            <p class="mb-2"><i class="fas fa-quote-left pe-2"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.</p>
+                            <p class="mb-2"><i class="fas fa-quote-left pe-2"></i></p>
                             <a class="read-more"></a>
 
                         </div>
@@ -171,10 +171,10 @@
 
                             <h2 class="d-flex justify-content-center mb-4 font-weight-bold title" style="font-family: Italiana">
                             </h2>
-                            <h5 class="font-weight-bold my-3 rating">Founder at ET Company</h5>
+                            <h5 class="font-weight-bold my-3"></h5>
                             <ul class="list-unstyled d-flex justify-content-center ">
                             </ul>
-                            <p class="mb-2"><i class="fas fa-quote-left pe-2"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.</p>
+                            <p class="mb-2"><i class="fas fa-quote-left pe-2"></i></p>
                             <a class="read-more"></a>
 
                         </div>
