--- a/src/main/resources/templates/directory.html
+++ b/src/main/resources/templates/directory.html
@@ -180,7 +180,7 @@
                                                         <div th:if="${serviceProvider.reviews.size() != 0}" >
                                                             <ul style="list-style: none" id="reviewList">
                                                                 <li th:each="review : ${serviceProvider.reviews}">
-                                                                    <div class="m-2 p-4" style="border-style: solid; border-radius: 5px;">
+                                                                    <div class="m-2 p-4" style="border-style: solid; border-radius: 5px; ">
                                                                         <input type="hidden" name="userId" th:value="${review.userId}" />
                                                                         <h6 th:text="${review.authorName}"></h6>
                                                                         <div th:if="${review.getGooglePhoto() != null}" class="d-flex justify-content-between">
@@ -198,7 +198,7 @@
                                                                             <a th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" th:href="@{/user/dashboard/{userId}(userId=${review.userId})}" class="btn btn-primary">Go to User</a>
 
                                                                         </form>
-                                                                    </p>
+                                                                    </div>
                                                                 </li>
                                                             </ul>
                                                         </div>
@@ -233,7 +233,7 @@
                                             <div class="pt-2">
 
                                                 <div th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">
-                                                    <b><a href="/login">Login</a> to leave a review!</b>
+                                                    <b><a style="color: #005cbf" href="/login">Login</a> to leave a review!</b>
                                                 </div>
                                             </div>
                                         </div>
